# Cargo.toml
[workspace]
members = ["sysapicon"]

[package]
name = "apicon"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.27", features = ["user", "signal", "process"] }
pingora = { version = "0.5.0", features = ["lb", "boringssl"] }
pingora-core = { version = "0.5.0", features = ["boringssl"] }
pingora-load-balancing = { version = "0.5.0", features = ["boringssl"] }
pingora-proxy = { version = "0.5.0", features = ["boringssl"] }
pingora-boringssl = "0.5.0"
boring = "4.17.0"
boring-sys = "4.17.0"
pingora-http = { version = "0.5.0" }
users = "0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing-appender = "0.2"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt", "macros", "net", "time", "process"] }
rand = "0.8"
tempfile = "3"
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
once_cell = "1"
signal-hook = "0.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }

[features]
default = []
jemalloc = ["dep:jemallocator"]
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
rcgen = "0.13"
criterion = "0.5"

[[bench]]
name = "allocator"
harness = false
